--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"animate.css": "^4.1.1",
 		"axios": "^0.24.0",
 		"bootstrap": "^5.1.3",
+		"cors": "^2.8.5",
 		"dat.gui": "^0.7.9",
 		"ethers": "^5.4.1",
 		"from-exponential": "^1.1.1",
